# ArxivMind

./: .gitignore  App.tsx  README.md  index.html  main.py  package.json  pyproject.toml  types.ts
components/: AnalysisSection.tsx  PaperCard.tsx  StatsChart.tsx
services/: arxivService.ts  geminiService.ts
