[project]
name = "arxivmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.1",
    "dotenv>=0.9.9",
    "fastapi>=0.124.0",
    "google>=3.0.0",
    "google-genai>=1.54.0",
    "google-generativeai>=0.8.5",
    "openai>=2.9.0",
    "uvicorn>=0.27.0",
]
